# reservations

./: .env.example  .gitignore  Cargo.toml  README.md
.fleet/: run.json
database/: schema.sql
deployment/: README.md  docker-compose.yaml
src/: main.rs
src/database/: schema.sql
src/libs/: carriers.rs  mod.rs  seat_map.rs
src/libs/config/: api_errors.rs  mod.rs
src/libs/database/: carriers.rs  mod.rs  schedules.rs
src/libs/endpoints/: mod.rs
src/libs/endpoints/availability/: mod.rs
src/libs/endpoints/health/: mod.rs
src/libs/endpoints/seats/: mod.rs
src/libs/utils/: carriers.rs  flights.rs  mod.rs
tests/: integration_seed_database.rs  seed_database.rs
tests/utils/: mod.rs
