[package]
name = "reservations"
version = "0.1.0"
edition = "2021"


[lib]
name = "reservations_library"
path = "src/libs/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
reqwest = "0.11.12"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.85"
rust_decimal = { version = "1.26", features = ["db-tokio-postgres", "serde-float"] }
rust_decimal_macros = "1.26"
simple_logger = "2.3.0"
log = "0.4.17"
thiserror = "1.0.37"
dotenv = "0.15.0"
derive_more = "0.99.17"
tokio = { version = "1", features = ["full"] }
envy = "0.4"


# HTTP1

[dev-dependencies]
grcov = "0.8.12"
rand = "0.8.5"

[[bin]]
name = "app"
path = "src/main.rs"